<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BirthdayMessenger</string>

    <string name="action_settings">Settings</string>
    <string name="new_person">New</string>
    <string name="delete_person">Delete</string>
    <string name="exit">Exit</string>

    <string name="name">Name</string>
    <string name="num">Phone number</string>
    <string name="custom_message">Leave blank for default, real name replaces (Name)</string>
    <string name="birthday">Birthday</string>
    <string name="save_changes">Save Changes</string>
    <string name="create_new">Create New</string>
    <string name="edit_message">Edit Message</string>

    <string name="default_message">Gratulerer med dagen (Name), håper du har en fin dag!</string>

    <string name="delete_question">Are you sure you want to delete this person?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>

    <string name="name_error">You must enter a name!</string>
    <string name="num_error">You must enter a 8 digit long number!</string>

    <string name="send_messages">Send messages</string>
    <string name="send_messages_auto">Send messages automaticly on/off</string>
    <string name="send_time">Send time</string>
    <string name="send_time_click">Click to change send time</string>
    <string name="default_message_title">Default message</string>
    <string name="default_message_click">Click here to set default message</string>


</resources>
