<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Settings">
        <CheckBoxPreference
            android:key="checkbox_preference"
            android:title="@string/send_messages"
            android:summary="@string/send_messages_auto" />

        <main.soakim.no.birthdaymessenger.TimePreference
            android:key="time_preference"
            android:title="@string/send_time"
            android:summary="@string/send_time_click" />

        <EditTextPreference
            android:key="message_preference"
            android:title="@string/default_message_title"
            android:summary="@string/default_message_click"
            android:text="@string/default_message"
            android:dialogTitle="@string/default_message_title" />

        <ListPreference
            android:key="language_preferance"
            android:title="@string/languages"
            android:entries="@array/language"
            android:entryValues="@array/languageData"/>

    </PreferenceCategory>
</PreferenceScreen>